# astro-chatbot-service

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  Dockerfile.test  FEATURE_SHEET.md  Makefile  README.md  alembic.ini  dev-requirements.txt  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
app/: main.py
data/: chatbot_eval_examples.jsonl  planner_eval_examples.jsonl  product_recommendation_eval_examples.jsonl  retrieval_eval_examples.jsonl
docs/: api.md  chatbot_execution_board.md  chatbot_improvement_roadmap.md  chatbot_quality_scorecard.md  digveda_architecture.drawio  market_positioning.md  observability.md
finetune/: eval.py  product_recommendation_eval.py  retrieval_eval.py
migrations/: env.py
prompts/: conversation_summarizer.txt  memory_extractor.txt  persona_v1.txt  planner.txt  planner_tools.txt
scripts/: embed_astrology_texts.py  eval_planner_in_docker.ps1  run_chatbot_eval.py  run_chatbot_eval_in_docker.ps1  test_in_docker.ps1
src/: main.py
tests/: conftest.py  test_architecture_hardening.py  test_birth_details_persistence.py  test_booking_tools.py  test_chat.py  test_chat_flow.py  test_daily_insights.py  test_embeddings.py  test_energy_flow.py  test_health.py  test_intent.py  test_kundli.py  test_notifications.py  test_pattern_engine.py  test_persona.py  test_planner.py  test_planner_eval.py  test_predictions.py  test_product_policy.py  test_product_recommendation_eval.py  test_prompt_injection.py  test_prompt_registry.py  test_rag.py  test_reranker.py  test_retrieval_eval.py  test_tool_call_planner.py  test_transits.py
(+121 files in other folders)
